# pathmorph

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: pipeline_v1.toml  pipeline_v1.yaml
src/pathmorph/: __init__.py  collision.py  core.py
src/pathmorph/cli/: __init__.py  main.py
src/pathmorph/manifest/: __init__.py  manifest.py
src/pathmorph/schemas/: __init__.py  loader.py
tests/: test_core.py
