[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathmorph"
version = "0.1.0"
description = "Invertible directory structure transformations with schema-driven path remapping"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["filesystem", "data-management", "pipeline", "schema", "reproducibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "confuk>=0.4.0",
    "omegaconf>=2.3.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[dependency-groups]
xxhash = ["xxhash>=3.0.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-tmp-files>=0.0.2",
    "ruff>=0.4.0",
]

[project.scripts]
pathmorph = "pathmorph.cli.main:app"

[project.urls]
Homepage = "https://github.com/yourusername/pathmorph"
Issues = "https://github.com/yourusername/pathmorph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/pathmorph"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
